# MTH088-2026-DiffGuard

./: .gitignore  AGENTS.md  README.md  apm.lock.yaml  apm.yml  fnox.toml  mise.toml  pitchfork.toml  prek.toml  pyproject.toml  ruff.toml
docs/report/: 00_cover.typ  01_introduction.typ  02_math_background.typ  03_methodology.typ  04_experiments.typ  05_discussion.typ  06_conclusion.typ  06_proposed_system.typ  07_conclusion.typ  main.typ  references.yaml
notebooks/experiment/: 01_aide_inference.ipynb  02_spai_inference.ipynb  03_handcrafted_features_and_failure_analysis.ipynb  aide.ipynb  spai.ipynb
src/diffguard/: __init__.py  aide_inference.py  analysis.py  dct.py  handcrafted_features.py
src/diffguard/cli/: build_analysis_artifacts.py  compute_handcrafted_features.py  run_spai_inference.py  z_image_turbo_fal.py  z_image_turbo_gguf.py
